--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-simple-star-rating": "^5.1.7",
     "recharts": "^2.15.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.83.4",
